2002-01-29  Christopher Faylor  <cgf@redhat.com>

	* dump_setup.cc (parse_filename): Don't consider '_' part of the
	version.

2002-01-28  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc: Fix typo.  Remove uid_t kludge.  Rely on kludge in
	sys/cygwin.h instead.
	* getfacl.c: Add include to remove warning.
	* mkgroup.c (main): Assign variables outside of parameter passing.
	This seems to eliminate some compiler warnings.

2002-01-28  Christopher Faylor  <cgf@redhat.com>

	* cygcheck.cc: Use specific cygwin includes, as required.

2002-01-28  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (MINGW_INCLUDES): Change cygwin include.
	* strace.cc: Use specific cygwin includes, as required.
	(load_cygwin): New function.  Loads cygwin DLL, if necessary.
	(attach_process): Attaches strace to a running process.
	(dostrace): Accept pid argument.  Attach to pid if supplied.
	(usage): Describe -p option.  Correct system description.
	(longopts): Alphabetize.
	(opts): Ditto.
	(main): Ditto.  Handle -p option.

2002-01-21  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (CXXFLAGS): Ensure that important settings are preserved
	even when overriden by command line.

2002-01-21  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Build intermediate cygcheck.o to force use of MINGW_CXXFLAGS.
	* cygcheck.cc (cygwin_info): Intitialize variable to quiet g++ warning.
	(dump_sysinfo): Make variables unsigned to quiet g++ warnings.
	* strace.cc (version_string): Rename from SCCSid.
	(add_child): Remove unused variable.
	(version): Use version_string.  Avoid use of fprintf.

2002-01-21  DJ Delorie  <dj@redhat.com>

	* Makefile.in: Use CXX instead of CC to compile C++ sources.

2002-01-17  DJ Delorie  <dj@redhat.com>

	* cygcheck.cc (already_did): Avoid default constructors, which may
	require exception support.

2001-01-16  Joshua Daniel Franklin  <joshuadfranklin@yahoo.com>

	* cygpath.cc (main): Add options to show Desktop and Start